Added Python and Kotlin, downgraded to Java 8