@@ -1,6 +1,7 @@
 package advent2018;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.function.Supplier;
 
 public class Utils {
@@ -8,13 +9,13 @@ public class Utils {
     }
 
     public static Path of(String fileName) {
-        return Path.of("../_input", fileName);
+        return Paths.get("../_input", fileName);
     }
 
     public static <T> T timeIt(Supplier<T> action) {
-        var start = System.nanoTime();
-        var result = action.get();
-        var end = System.nanoTime();
+        long start = System.nanoTime();
+        T result = action.get();
+        long end = System.nanoTime();
         System.out.printf("Took %.2fs%n", (end - start) * 0.001 * 0.001 * 0.001);
         return result;
     }
